--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
         <button type="button">Надіслати</button>
     </form>
 
+    <p>P.s Never gonna give you up
+        Never gonna let you down
+        Never gonna run around and desert you
+        Never gonna make you cry
+        Never gonna say goodbye
+        Never gonna tell a lie and hurt you</p>
+
 </main>
 </body>
 </html>
